native/include/luaujava.h

// lua_mainthread is not wrapped
LUA_API void luaW_resetthread(lua_State* L);
// lua_isthreadreset is not wrapped

// lua_absindex is not wrapped
// lua_gettop is not wrapped
// lua_settop is not wrapped
// lua_pushvalue is not wrapped
// lua_remove is not wrapped
// lua_insert is not wrapped
// lua_replace is not wrapped
// lua_checkstack is not wrapped
// lua_rawcheckstack is not wrapped
// lua_xmove is not wrapped
// lua_xpush is not wrapped

// lua_isnumber
// lua_isstring
// lua_iscfunction
// lua_isLfunction
// lua_isuserdata
// lua_type
// lua_typename is unused (luaL_typename is preferred)
LUA_API int luaW_equal(lua_State* L, int idx1, int idx2);
// lua_rawequal
LUA_API int luaW_lessthan(lua_State* L, int idx1, int idx2);
// lua_tonumberx
// lua_tointegerx
// lua_tounsignedx
// lua_tovector
// lua_toboolean
LUA_API const char* luaW_tolstring(lua_State* L, int idx, size_t* len);
// lua_tostringatom is unused (only lstrings)
LUA_API int luaW_objlen(lua_State* L, int idx);
// lua_tocfunction
// lua_tolightuserdata
// lua_tolightuserdatatagged
// lua_touserdata
// lua_touserdatatagged
// lua_userdatatag
// lua_lightuserdatatag
// lua_tothread
// lua_tobuffer
// lua_topointer

// lua_pushnil
// lua_pushnumber
// lua_pushinteger
// lua_pushunsigned
// lua_pushvector
LUA_API void luaW_pushlstring(lua_State* L, const char* s, size_t l);
// lua_pushstring is unused (only lstrings)
// lua_pushvfstring is unused (only lstrings)
// lua_pushfstringL is unused (use java formatting)

// Pushes a Java closure. `fn` and `cont` are FFM upcall stubs; they are stored as
// hidden upvalues 1 and 2 and the real lua_CFunction is luaW_dispatch. User upvalues
// therefore start at index 3 - see LuaState.upvalueIndex on the Java side.
LUA_API void luaW_pushcclosurek(lua_State* L, lua_CFunction fn, const char* debugname, int nup, lua_Continuation cont);
// lua_pushboolean
// lua_pushthread
// lua_pushlightuserdatatagged
LUA_API void* luaW_newuserdatatagged(lua_State* L, size_t sz, int tag);
LUA_API void* luaW_newuserdatadtor(lua_State* L, size_t sz, void (*dtor)(void*));