src/generated/java/net/hollowcube/luau/internal/vm/luawrap_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_resetthread(lua_State *L)
     * }
     */
    public static MemorySegment luaW_resetthread$address() {
        return luaW_resetthread.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_resetthread(lua_State *L)
     * }
     */
    public static void luaW_resetthread(MemorySegment L) {
        var mh$ = luaW_resetthread.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_resetthread", L);
            }
            mh$.invokeExact(L);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_equal {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_equal");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_equal(lua_State *L, int idx1, int idx2)
     * }
     */
    public static FunctionDescriptor luaW_equal$descriptor() {
        return luaW_equal.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_equal(lua_State *L, int idx1, int idx2)
     * }
     */
    public static MethodHandle luaW_equal$handle() {
        return luaW_equal.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_equal(lua_State *L, int idx1, int idx2)
     * }
     */
    public static MemorySegment luaW_equal$address() {
        return luaW_equal.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_equal(lua_State *L, int idx1, int idx2)
     * }
     */
    public static int luaW_equal(MemorySegment L, int idx1, int idx2) {
        var mh$ = luaW_equal.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_equal", L, idx1, idx2);
            }
            return (int)mh$.invokeExact(L, idx1, idx2);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_lessthan {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_lessthan");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_lessthan(lua_State *L, int idx1, int idx2)
     * }
     */
    public static FunctionDescriptor luaW_lessthan$descriptor() {
        return luaW_lessthan.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_lessthan(lua_State *L, int idx1, int idx2)
     * }
     */
    public static MethodHandle luaW_lessthan$handle() {
        return luaW_lessthan.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_lessthan(lua_State *L, int idx1, int idx2)
     * }
     */
    public static MemorySegment luaW_lessthan$address() {
        return luaW_lessthan.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_lessthan(lua_State *L, int idx1, int idx2)
     * }
     */
    public static int luaW_lessthan(MemorySegment L, int idx1, int idx2) {
        var mh$ = luaW_lessthan.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_lessthan", L, idx1, idx2);
            }
            return (int)mh$.invokeExact(L, idx1, idx2);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_tolstring {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_tolstring");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern const char *luaW_tolstring(lua_State *L, int idx, size_t *len)
     * }
     */
    public static FunctionDescriptor luaW_tolstring$descriptor() {
        return luaW_tolstring.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern const char *luaW_tolstring(lua_State *L, int idx, size_t *len)
     * }
     */
    public static MethodHandle luaW_tolstring$handle() {
        return luaW_tolstring.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern const char *luaW_tolstring(lua_State *L, int idx, size_t *len)
     * }
     */
    public static MemorySegment luaW_tolstring$address() {
        return luaW_tolstring.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern const char *luaW_tolstring(lua_State *L, int idx, size_t *len)
     * }
     */
    public static MemorySegment luaW_tolstring(MemorySegment L, int idx, MemorySegment len) {
        var mh$ = luaW_tolstring.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_tolstring", L, idx, len);
            }
            return (MemorySegment)mh$.invokeExact(L, idx, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_objlen {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_objlen");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_objlen(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaW_objlen$descriptor() {
        return luaW_objlen.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_objlen(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaW_objlen$handle() {
        return luaW_objlen.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_objlen(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaW_objlen$address() {
        return luaW_objlen.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_objlen(lua_State *L, int idx)
     * }
     */
    public static int luaW_objlen(MemorySegment L, int idx) {
        var mh$ = luaW_objlen.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_objlen", L, idx);
            }
            return (int)mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_pushlstring {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_LONG
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_pushlstring");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_pushlstring(lua_State *L, const char *s, size_t l)
     * }
     */
    public static FunctionDescriptor luaW_pushlstring$descriptor() {
        return luaW_pushlstring.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_pushlstring(lua_State *L, const char *s, size_t l)
     * }
     */
    public static MethodHandle luaW_pushlstring$handle() {
        return luaW_pushlstring.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_pushlstring(lua_State *L, const char *s, size_t l)
     * }
     */
    public static MemorySegment luaW_pushlstring$address() {
        return luaW_pushlstring.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_pushlstring(lua_State *L, const char *s, size_t l)
     * }
     */
    public static void luaW_pushlstring(MemorySegment L, MemorySegment s, long l) {
        var mh$ = luaW_pushlstring.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_pushlstring", L, s, l);
            }
            mh$.invokeExact(L, s, l);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_pushcclosurek {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_pushcclosurek");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_pushcclosurek(lua_State *L, lua_CFunction fn, const char *debugname, int nup, lua_Continuation cont)
     * }
     */
    public static FunctionDescriptor luaW_pushcclosurek$descriptor() {
        return luaW_pushcclosurek.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_pushcclosurek(lua_State *L, lua_CFunction fn, const char *debugname, int nup, lua_Continuation cont)
     * }
     */
    public static MethodHandle luaW_pushcclosurek$handle() {
        return luaW_pushcclosurek.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_pushcclosurek(lua_State *L, lua_CFunction fn, const char *debugname, int nup, lua_Continuation cont)
     * }
     */
    public static MemorySegment luaW_pushcclosurek$address() {
        return luaW_pushcclosurek.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_pushcclosurek(lua_State *L, lua_CFunction fn, const char *debugname, int nup, lua_Continuation cont)
     * }
     */
    public static void luaW_pushcclosurek(MemorySegment L, MemorySegment fn, MemorySegment debugname, int nup, MemorySegment cont) {
        var mh$ = luaW_pushcclosurek.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_pushcclosurek", L, fn, debugname, nup, cont);
            }
            mh$.invokeExact(L, fn, debugname, nup, cont);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_newuserdatatagged {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_LONG,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_newuserdatatagged");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
